@@ -173,6 +173,11 @@ Core and Builtins
 Library
 -------
 
+- Issue #1533164: Installed but not listed *.pyo was breaking Distutils
+  bdist_rpm command.
+
+- Issue #5378: added --quiet option to Distutils bdist_rpm command.
+
 - Issue #5052: make Distutils compatible with 2.3 again.
 
 - Issue #5316: Fixed buildbot failures introduced by multiple inheritance
